--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ __pycache__/
 /__pycache__
 __pycache__
 *.pyc
-migrations/
-/migrations
-migrations
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
