--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ future>=0.18.2
 eventlet>=0.25.2
 pyotp>=2.3.0
 gunicorn==19.9.0
-psycopg2>=2.7.7
-psycopg2-binary>=2.7.7
+# psycopg2>=2.7.7
+# psycopg2-binary>=2.7.7
 Pillow>=6.2.1
 whitenoise>=3.2
 honcho>=1.0.1
