--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 django>=3.1
 django-cors-middleware>=1.3.1
-django-debug-toolbar==2.0
+django-debug-toolbar>=2.0
 django-currentuser>=0.5.0
 django-cors-headers>=3.2.1
 djangorestframework>=3.11.0
